SERVER-55662 Retry writes to config server on step down errors in create collection coordinator